chore: set axios header, integrate dashboard api

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.ant-card .ant-card-body {
+  padding: 12px !important;
+}
